--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:            Slate+Simple Jekyll Theme
-description:      Your site description...
-copyright:        Your Name
-url: # add your custom site url (format: https://example.com)
+title:            Zachary Colimon
+description:      This is my portfolio
+copyright:        Zachary Colimon
+url: #zacharycolimon.com
 
 
 future:      false  # publish future dated posts --  true, false (default)
@@ -20,7 +20,7 @@ sass:
 permalink: /:categories/:year-:month-:day/:title.html
 
 # Amount of post to show on home page
-paginate: 5
+paginate: 3
 
 #kramdown:
 #  input: GFM
