making it mine mwahaha
Changing Zac's stuff to my name and url

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:            Zachary Colimon
+title:            Justin Cacal
 description:      This is my portfolio
-copyright:        Zachary Colimon
-url: #zacharycolimon.com
+copyright:        Justin Cacal
+url: #justincacal.com
 
 
 future:      false  # publish future dated posts --  true, false (default)
